2007-05-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm:
	fixed the bug for unreachable timeout
	the target that receives noSuchObject is deleted from polling

2007-05-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/CDef.pm: Imported the CDEF collector
	from Chrstian Schnidrig and adapted to multithreading.

	* perllib/Torrus/DevDiscover.pm: Adapted for global configuration.

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	New discovery parameter: RFC2863_IF_MIB::traffic-summaries
	Currently summaries work only within single output file.
	

2007-04-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm: Search engine GUI

2007-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/buildsearchdb.in: The search DB builder (GUI is not ready yet)

	* perllib/Torrus/DevDiscover.pm:
	New discovery param: show-recursive

	* templates/default-dir.html: Limit recursive view to
	subtrees having show-recursive=yes

2007-04-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree.pm:
	Moved the param properties to the XML config.
	All trees need recompilation after this change.

2007-04-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree/XMLCompiler.pm (compile_subtrees):
	Removed support for <filepattern>

2007-03-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_graphline):
	line-style line-color from the node params override thse
	in the view params

2007-03-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/JunOS.pm: Added per-CoS traffic statistics

2007-03-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Apache2Handler.pm, perllib/Torrus/ApacheHandler.pm:
	User login event in the apache error log
